--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,7 +84,7 @@ set(CPACK_GENERATOR "TGZ")
 
 set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
 set(CPACK_PACKAGE_VERSION ${MODULE_VERSION})
-set(CPACK_PACKAGE_CONTACT "xucong@t3caic.com")
+set(CPACK_PACKAGE_CONTACT "xucong@synaptix.ai")
 set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS OFF)
 set(CPACK_SET_DESTDIR ON)
 set(CPACK_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
