--- a/src/data_storage/CMakeLists.txt
+++ b/src/data_storage/CMakeLists.txt
@@ -9,7 +9,7 @@ if(CMAKE_MW STREQUAL "CYBER")
     elseif (CMAKE_SYSTEM_PROCESSOR MATCHES arm64)
         target_link_libraries(cyber_recorder
                 common
-                ${caicAD_CM_SDK_LIBS}
+                ${cAD_CM_SDK_LIBS}
                 ${Boost_LIBRARIES}
                 ${GLOG_LIBRARIES}
                 ${PROTOBUF_LIBRARIES}
