commit: refactor: restructure Makefile, add x86 support and enhance trigger system
- Refactored Makefile by removing unused variables and simplifying structure
- Added tgz_x86 target with dedicated toolchain file for x86 builds
- Updated thor toolchain path to new cross_toolchains directory
- Enabled conditional data uploader initialization in debug mode
- Introduced new AI and shadow mode triggers (AILidarVisionCompTrigger, AIObjectTypeTrigger, AISkipFrameTrigger, ShadowABModelTrigger, ShadowManCtlCompTrigger)
- Refactored trigger registration to remove node handle dependency
- Updated trigger factory to manage trigger instances
- Implemented RsclChannelManager with observer pattern for DDS subscribers and message routing
- Integrated channel manager with recorder, reporter and trigger components
- Renamed loggger directory to logger and updated environment variables
- Removed redundant copyright headers
- Updated CMake dependencies and build configurations with CYBER/RSCL middleware detection
- Configured CUDA, TensorRT and other library dependencies
- Adjusted trigger processing loop interval from 10ms to 100ms for better performance
- Modified strategy config file existence check using std::filesystem
- Enabled processed trigger logging by uncommenting log statement
- Updated copyright notice format in multiple files
- Changed author attribution from xucong to ymm in statusUtils files
- Fixed spacing in CPU percentage calculation output

--- a/src/data_storage/CMakeLists.txt
+++ b/src/data_storage/CMakeLists.txt
@@ -9,7 +9,7 @@ if(CMAKE_MW STREQUAL "CYBER")
     elseif (CMAKE_SYSTEM_PROCESSOR MATCHES arm64)
         target_link_libraries(cyber_recorder
                 common
-                ${cAD_CM_SDK_LIBS}
+                ${caicAD_CM_SDK_LIBS}
                 ${Boost_LIBRARIES}
                 ${GLOG_LIBRARIES}
                 ${PROTOBUF_LIBRARIES}
